--- a/src/components/AdminMealCalendar.css
+++ b/src/components/AdminMealCalendar.css
@@ -4,6 +4,14 @@
   padding: 0;
 }
 
+.meal-calendar-title {
+  font-size: 2rem;
+  color: #333;
+  text-align: center;
+  margin-bottom: 30px;
+  font-weight: bold;
+}
+
 .calendar-header {
   display: flex;
   justify-content: space-between;
