--- a/src/components/OutputMain.css
+++ b/src/components/OutputMain.css
@@ -119,13 +119,14 @@
 
 /* 월별 달력 스타일 */
 .calendar-container {
-  width: 100%;
-  margin: 0 auto;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 0 20px;
+  align-items: stretch;
   box-sizing: border-box;
+  margin-left: calc(-50vw + 50%);
 }
 
 .calendar-header {
