--- a/src/components/OutputMain.css
+++ b/src/components/OutputMain.css
@@ -812,6 +812,9 @@
 .notice-status {
   font-size: 1.1rem;
   color: white;
+  font-weight: 600;
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+}
 
 @media (max-width: 768px) {
   .school-name {
